update query is functional
